DT-141 : fixed formatting so that container that has fields utilizes full width with proper spacing between containers and margin around main container

--- a/src/main/resources/static/drill-creation.css
+++ b/src/main/resources/static/drill-creation.css
@@ -35,6 +35,8 @@ span {
 label {
     font-family: Poppins, serif;
     font-size: 3vh;
+
+    text-align: center;
 }
 
 input {
@@ -50,23 +52,24 @@ textarea {
 }
 
 .body-container{
+    display: flex;
     background-color: white;
 }
 
 .main-container {
-    overflow: hidden;
-    display: flex;
-
     height: 100%;
+    width: 100%;
+
+    padding: 20px;
 }
 
 .context-container {
-    width: 95%;
-    height: 90vh;
+    width: 100%;
+    height: 100vh;
     margin: 0;
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .drill-create-form {
@@ -74,5 +77,46 @@ textarea {
 
     align-content: center;
     justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.drill-create-input-div {
+    display: flex;
+
     flex-direction: column;
+    justify-content: flex-start;
+    align-content: space-between;
+    flex-grow: 1;
+
+}
+
+.spacing-5-div {
+    display: flex;
+
+    flex-basis: 4%;
+}
+
+.spacing-10-div {
+    display: flex;
+
+    flex-basis: 10%;
+}
+
+.drill-create-form-30-field {
+    display: flex;
+
+    flex-basis: 30%;
+}
+
+.drill-create-form-48-field {
+    display: flex;
+
+    flex-basis: 45%;
+}
+
+.drill-create-form-100-field {
+    display: flex;
+
+    flex-basis: 100%;
 }
